# annex-a-sen-validator-be

./: LICENSE  pyproject.toml  rpc_main.py
Documentation/: README.txt  annex a send validation rules.xlsx
fake_data/: fake_sen.xlsx
sen_validator/: __main__.py  config.py  datastore.py  ingress.py  sen_validator.py  utils.py
sen_validator/rule_engine/: __api.py  __context.py  __init__.py  __registry.py
sen_validator/rules/: ruleset_utils.py
sen_validator/rules/sen_v0.0.1/: __init__.py
sen_validator/rules/sen_v0_0_1/: __init__.py  rule_001.py  rule_101a.py  rule_101b.py  rule_101c.py  rule_101d.py  rule_102a.py  rule_102b.py  rule_103.py  rule_105a.py  rule_105b.py  rule_105c.py  rule_105d.py  rule_106a.py  rule_106b.py  rule_107.py  rule_108a.py  rule_108b.py  rule_109.py  rule_201a.py  rule_201b.py  rule_201c.py  rule_201d.py  rule_202a.py  rule_202b.py  rule_203.py  rule_205a.py  rule_207.py  rule_208a.py  rule_208b.py  rule_209.py  rule_test_100.py  rule_test_200.py
sen_validator/test_engine/: __init__.py
sen_validator/tests/: test_ruleset.py
sen_validator/tests/rule_engine/: test_context.py  test_registry.py
